first version of featured beer leaguer archive
first version of featured beer leaguer archive and updated css

--- a/wp-bootstrap-starter-child/style.css
+++ b/wp-bootstrap-starter-child/style.css
@@ -201,6 +201,15 @@ footer#colophon {
 }
 
 
+/* --------------- */
+/* Featured Player */
+/* --------------- */
+
+.featured-beer-leaguer strong {
+	color: #0272ba;
+}
+
+
 
 /* ---------- */
 /* Contact Us */
