--- a/wp-bootstrap-starter-child/style.css
+++ b/wp-bootstrap-starter-child/style.css
@@ -36,6 +36,33 @@ a:hover {
 	color: #D8D8D8;
 }
 
+#masthead .navbar-nav>li>a {
+    padding: 0.5em;
+}
+
+
+/* Navigation (Desktop) */
+
+.navbar-nav {
+	flex-direction: row;
+}
+
+.navbar-light .navbar-toggler {
+	display: none;
+}
+
+.collapse {
+	display: flex;
+}
+
+.navbar-collapse {
+	flex-basis: auto;
+}
+
+.navbar-brand {
+	width: 45%;
+}
+
 
 /* Modal / Popup */
 
@@ -51,13 +78,10 @@ a:hover {
 /* Header */
 /* ------ */
 
-.navbar-brand {
-	width: 60%;
-}
 
 #masthead .navbar-nav > li > a {
 	color: #0272ba;
-	font-size: 18px;
+	font-size: 16px;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 400;
 }
@@ -87,6 +111,16 @@ footer#colophon {
 
 .social-icons a:hover {
 	color: #D8D8D8 !important;
+}
+
+
+
+/* ---------- */
+/* Login Page */
+/* ---------- */
+
+.login h1 a {
+	background-image: url(http://thebeerleaguetribune.com/wp-content/uploads/2017/09/login-logo.jpg);
 }
 
 
@@ -209,6 +243,29 @@ footer#colophon {
 	color: #0272ba;
 }
 
+.featured-beer-leaguer em {
+	font-size: 12px;
+}
+
+.featured-thumbnail {
+	width: 100%;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	margin-bottom: 1em;
+}
+
+.view-full-article-button {
+	width: 100%;
+	text-align: center;
+}
+
+.article-button {
+	margin-top: 1em;
+	background-color: #0272ba;
+}
+
 
 
 /* ---------- */
@@ -278,6 +335,20 @@ footer#colophon {
 		right: 0;
 	}
 
+	.navbar-light .navbar-toggler {
+		display: block;
+	}
+
+
+	/* Navigation */
+
+	.collapse {
+		display: none;
+	}
+
+	.navbar-nav {
+		flex-direction: column;
+	}
 
 /* ---- */
 /* Home */
@@ -297,6 +368,7 @@ footer#colophon {
 		padding-left: 1em;
 		padding-right: 1em;
 	}
+
 
 }
 
